--- a/QuanLyBanHang/meta/app.json
+++ b/QuanLyBanHang/meta/app.json
@@ -29,7 +29,7 @@
     "Edit Tbl Gn Address Book",
     "Tbl Gn Address Book Types",
     "Thêm Addressbook Type",
-    "Edit Tbl Gn Address Book Type",
+    "Sửa AddressBook Type",
     "Tbl Gn Cities",
     "Add Tbl Gn City",
     "Edit Tbl Gn City",
